fixing portfolio alignment

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,67 +1,49 @@
 /* header css */
 .body {
-    display: flex;
-    flex-direction: column;
     background-image: url("./../img/fishnets-and-hearts.png");
     background-repeat: repeat;
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
     color: #777777;
-    min-height: 100vh;
 }
 
 .headline {
     background-color: #4aaaa5;
-    padding: 20px;
-    color: #fff;
     -webkit-box-shadow: 1px 1px 2px #666666;
+    margin: 0;
+    padding: 20px;
 }
 
-h2 {
+h2, h4 {
     color: #4aaaa5;
-    padding-bottom: 10px;
     margin-top: 0;
+    font-weight: bold;
     font-family: 'Georgia', Times, 'Times New Roman', serif;
 }
 
-a:hover,a:active{
-    background-color:#eee;
-
+a:hover, a:active {
+    background-color: #eee;
 }
 
-.border-bottom {
-    border-bottom: 2px solid #cccccc;
-}
-
-/* content css */
-
+/* main container css */
 .section-content {
     background-color: white;
-    width: 920px;
-    height: 100%;
+    /* height: 100%; */
     border: 1px solid #cccccc;
+    color: #777777;
 }
 
-.section-main {
-    display: flex;
-    flex: 1;
-    justify-content: center;
+/* About Me page css */
+.portfolio-image {
+    width: 170px;
+    height: 200px;
 }
 
-.portfolio-image{
-    width:170px;
-    height:200px;
-}
-
+/* portfolio page css */
 .image-label {
     background-color: #4aaaa5;
     color: white;
     font-size: 16px;
-    text-align: center;
     bottom: 20px;
-    position: absolute;
-    padding: 10px 0px;
-    left: 0;
-    width: 100%;
 }
 
 .portfolio-pic {
@@ -80,14 +62,19 @@ a:hover,a:active{
     justify-content: center;
     color: white;
     flex-shrink: none;
-    position: sticky;
-} 
+}
 
-/*
-    These rules take effect when the browser's width
-    is either 640 px or less.
-  */
-  @media screen and (max-width: 250px) {
-        
+/* These rules take effect when the browser's width
+    is either 640 px or less.*/
+
+@media screen and (max-width: 640px) {
+    .headline {
+        background-color: #4aaaa5;
+        padding: 10px;
+        -webkit-box-shadow: 1px 1px 2px #666666;
+    }
+
+    .section-content {
+    min-width: 300px;
     }
 }
